--- a/style.css
+++ b/style.css
@@ -1,82 +1,81 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.navbar-arkaplan{
-    background-color: #144272;
-    color: white;
-   
+.navbar-arkaplan {
+  background-color: #144272;
+  color: white;
 }
 
-.navbar-arkaplan .navbar-nav .nav-link, .navbar-brand{
-    color: white;
-  }
-
-.arkaplan1{
-    background-color: #D6E4E5;
-    border-radius: 20px;
+.navbar-arkaplan .navbar-nav .nav-link,
+.navbar-brand {
+  color: white;
 }
 
-.arkaplan2{
-    background-color: #FFE1E1;
-    border-radius: 20px;
-}
-.arkaplan3{
-    background-color: #EEF1FF;
-    border-radius: 20px;
-}
-.arkaplan4{
-    background-color: #8FE3CF;
-    border-radius: 20px;
+.arkaplan1 {
+  background-color: #d6e4e5;
+  border-radius: 20px;
 }
 
-.footer-kapsayici{
-    display: grid;
-    grid-template-columns: 3fr 1fr;
+.arkaplan2 {
+  background-color: #ffe1e1;
+  border-radius: 20px;
+}
+.arkaplan3 {
+  background-color: #eef1ff;
+  border-radius: 20px;
+}
+.arkaplan4 {
+  background-color: #8fe3cf;
+  border-radius: 20px;
 }
 
-
-.ikonlar{
-    display: inline-block; 
-    background-color: white; 
-    width: 55px; 
-    height: 55px; 
-    border-radius: 50%;
-    
+.footer-kapsayici {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
 }
 
-.iconlar-classi{
-    margin-top: 35px;
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
+.ikonlar {
+  display: inline-block;
+  background-color: white;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+}
+
+.iconlar-classi {
+  margin-top: 35px;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
 }
 
 @media only screen and (max-width: 768px) {
-    .iconlar-classi{
-        margin-top: 18px;
-        display: flex;
-        flex-direction: column;
-        gap: 18px;
-        
-    }
-
-    .footer-kapsayici{
-        gap: 70px;
-    }
+  .iconlar-classi {
+    margin-top: 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
   }
 
-
-.giris-kayit-buton a{
-    text-decoration: none;
-    color: black;
-    font-size: 17px;
-    transition: 0.3s;
+  .footer-kapsayici {
+    gap: 70px;
   }
+}
 
-  .giris-kayit-buton a:hover{
+.giris-kayit-buton a {
+  text-decoration: none;
+  color: black;
+  font-size: 17px;
+  transition: 0.3s;
+}
 
-    color: #d80707;
-  }
+.giris-kayit-buton a:hover {
+  color: #d80707;
+}
+
+.giris-kayit-buton .kayit-ol {
+  margin-left: 25px;
+}
